--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,16 @@ buildscript {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
     }
+
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
+    }
 }
 
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
+    id 'androidx.navigation.safeargs' version '2.5.1' apply false
 }
 
 task clean(type: Delete) {
