configuring retrofit creating characters response models creating characters fragment creating characters view model and use cases calling server to get characters

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
@@ -74,6 +75,8 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+    //data binding
+    implementation 'androidx.databinding:databinding-runtime:7.3.1'
 
     testImplementation 'junit:junit:4.13.2'
 
