adding room database dependency to store characters locally

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.marvelapplication"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -43,7 +43,7 @@ tasks.getByPath("preBuild").dependsOn("ktlintFormat")
 ktlint{
     android = true
     ignoreFailures = false
-    disabledRules = ["final-newline"]
+    disabledRules = ["final-newline", "no-wildcard-imports"]
     reporters{
         reporter "checkstyle"
     }
@@ -52,7 +52,7 @@ ktlint{
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
@@ -77,6 +77,11 @@ dependencies {
 
     //data binding
     implementation 'androidx.databinding:databinding-runtime:7.3.1'
+
+    // Room database components
+    implementation 'androidx.room:room-runtime:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
 
     testImplementation 'junit:junit:4.13.2'
 
