--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,14 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
 
+    //Unit tests
     testImplementation 'junit:junit:4.13.2'
 
+    //Instrumented tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'com.google.truth:truth:1.0.1'
+    androidTestImplementation 'androidx.room:room-testing:2.4.3'
 
 }
