Adding dependencies for Unit testing under Unit tests comment in app build.gradle Creating CharacterDetailsUseCaseImplTest.kt as unit test cases CharacterDetailsUseCaseImpl.kt to test get comics

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
 
     //Unit tests
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
 
     //Instrumented tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
